// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Other|/stories//Dirname Example story 1 1`] = `
.emotion-0 {
  font-family: -apple-system,".SFNSText-Regular","San Francisco",BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue","Lucida Grande","Arial",sans-serif;
  color: #444;
  -webkit-font-smoothing: antialiased;
  font-size: 13px;
}

<div
  class="emotion-0 emotion-1"
>
  <button
    type="button"
  >
    Story 1
  </button>
</div>
`;

exports[`Storyshots Other|/stories//Dirname Example story 2 1`] = `
.emotion-0 {
  font-family: -apple-system,".SFNSText-Regular","San Francisco",BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue","Lucida Grande","Arial",sans-serif;
  color: #444;
  -webkit-font-smoothing: antialiased;
  font-size: 13px;
}

<div
  class="emotion-0 emotion-1"
>
  <button
    type="button"
  >
    Story 2
  </button>
</div>
`;
